--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,22 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/variables";
+@import "./utils/mixins";
+@import "./utils/normalize";
+@import "./utils/fonts";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
+@import "./blocks/mobile-menu.scss";
+@import "./blocks/content.scss";
+@import "./blocks/product-poster.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/benefits.scss";
+@import "./blocks/presentation.scss";
+@import "./blocks/about-us.scss";
+@import "./blocks/technology.scss";
+@import "./blocks/testimonials.scss";
+@import "./blocks/features.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/questions.scss";
+@import "./blocks/footer.scss";
